hphp/test/zend/bad/ext-spl/SplFixedArray_offsetSet_one_invalid_parameter.php
<?php
$array = new SplFixedArray(5);
$a = $array->offsetSet(2);
if(is_null($a)) {
	echo 'PASS';
}
?>